TS functionality, added route files, created server

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "url": "https://github.com/Pattiqus/dynamic-express-based-note-taker/issues"
   },
   "homepage": "https://github.com/Pattiqus/dynamic-express-based-note-taker#readme",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@types/node": "^17.0.18"
+  }
 }
