--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "homepage": "https://github.com/Pattiqus/dynamic-express-based-note-taker#readme",
   "description": "",
   "devDependencies": {
-    "@types/node": "^17.0.18"
+    "@types/node": "^17.0.18",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.5"
   }
 }
